# xbrew

./: Cargo.toml  Makefile  README.md  TODO.md  techstack.md  techstack.yml  xbrew  xbrew.py
.github/workflows/: makefile.yml
docs/: _config,yml  index.html
scripts/: dev-setup.sh  install.sh
src/: cli.c  cli.h  common.h  fs.c  fs.h  fs_utils.rs  http-get.c  http-get.h  io_utils.rs  main.c  main.rs  parson.c  project.rs  update.rs  upgrade.c  upgrade.h  version.h
templates/3ds/: Makefile  README.md
templates/3ds/source/: main.c
templates/_common/: .gitignore
templates/nds/: Makefile  README.md
templates/nds/arm7/: Makefile
templates/nds/arm7/source/: main.c
templates/nds/arm9/: Makefile
templates/nds/arm9/source/: main.c
templates/switch/: Makefile  README.md
templates/switch/source/: main.c
test/: Makefile  test.c  test.h
