[package]
name = "xbrew"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
colored = "2.0.0"
text_io = "0.1.12"
regex = "1"
tempfile = "3.3.0"
reqwest = "0.11.13"
error-chain = "0.12.4"